# FastCGI

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
src/: client.rs  lib.rs  macros.rs  meta.rs  request.rs  response.rs  server.rs
src/codec/: buffer.rs  codec.rs  mod.rs  ring_buffer.rs
src/conn/: connection.rs  endpoint.rs  mod.rs  parser.rs  state.rs  stream.rs
src/multiplex/: mod.rs
src/multiplex/client/: config.rs  management.rs  mod.rs  pending.rs
src/multiplex/common/: decoder.rs  encoder.rs  mod.rs  recv.rs  send.rs
src/protocol/: meta.rs  mod.rs
src/protocol/parser/: defrag.rs  mod.rs  request.rs  response.rs
src/protocol/record/: abort_request.rs  begin_request.rs  data.rs  end_request.rs  get_values.rs  header.rs  mod.rs  params.rs  standard.rs  types.rs  unknown_type.rs
src/protocol/record/common/: byte_slice.rs  mod.rs  nvps.rs  stream_chunker.rs
src/protocol/transport/: frame.rs  mod.rs
src/record/: abort_request.rs  begin_request.rs  byte_slice.rs  data.rs  empty.rs  end_request.rs  get_values.rs  header.rs  mod.rs  nvps.rs  params.rs  record.rs  standard.rs  stream_fragments.rs  types.rs  unknown_type.rs
src/record/body/: byte_slice.rs  empty.rs  end_of_stream.rs  mod.rs  nvps.rs  stream_chunk.rs
tests/: echo.rs  echo.txt  macro.rs
