[package]
name = "fastcgi"
version = "0.1.0"
edition = "2021"
categories = ["fastcgi", "network", "async"]
readme = "README.md"
authors = ["Nick Swaerdens <nick_swaerdens@outlook.com>"]

[dependencies]
bytes = "1"
futures = "0.3.25"
tokio = { version = "1.24.1", features = ["net"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
# mediatype = { version = "0.19.10", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.24.1", features = ["rt", "macros"] }
